--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -362,7 +362,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17218080">
                                         
-                                            23 comments
+                                            24 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=shawndumas">shawndumas</a></strong> &nbsp;•&nbsp;
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/apple-looks-to-expand-advertising-business-with-new-network-for-apps-1527869990">Apple Looks to Expand Advertising Business with New Network for Apps</a>
+                                    <a href="https://github.com/uber/horovod">Horovod: Distributed Training Framework for TensorFlow, Keras, and PyTorch</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17215391">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17217324">
                                         
-                                            41 comments
+                                            9 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=maltalex">maltalex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527959309"
+                                            href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527987787"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     86 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528042803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528043404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
