--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -404,17 +404,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/yandex/odyssey">Odyssey – Scalable PostgreSQL connection pooler</a>
+                                    <a href="https://twitter.com/guieevc/status/1002494428748140544">Cisco says 90% of internet traffic goes through Erlang-controlled nodes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17187436">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17218190">
                                         
-                                            40 comments
+                                            63 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527686710"
+                                            href="https://news.ycombinator.com/user?id=okket">okket</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528006878"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     203 points
                                 </span>
@@ -428,19 +428,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
+                                    <a href="https://github.com/yandex/odyssey">Odyssey – Scalable PostgreSQL connection pooler</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17187436">
                                         
-                                            76 comments
+                                            40 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527749697"
+                                            href="https://news.ycombinator.com/user?id=pmwkaa">pmwkaa</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527686710"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    202 points
+                                    203 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528042803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528043404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
