--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -290,7 +290,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17220792">
                                         
-                                            6 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nicholas73">nicholas73</a></strong> &nbsp;•&nbsp;
@@ -554,7 +554,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17220803">
                                         
-                                            2 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=mauliknshah">mauliknshah</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528053003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528053605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
