--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://ekeler.com/game-boy-camera-canon-ef-mount/">Game Boy Camera Canon EF Lens Mount</a>
+                                    <a href="http://diamondssuck.com/">Diamonds Suck (2006)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17217827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17186457">
                                         
-                                            23 comments
+                                            215 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rainbowmverse">rainbowmverse</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527998189"
+                                            href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527675260"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    387 points
+                                    389 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528053003" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528053605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
