--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -212,17 +212,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://aeon.co/essays/what-can-aristotle-teach-us-about-the-routes-to-happiness">Why read Aristotle today?</a>
+                                    <a href="https://www.ctrl.blog/entry/flattr-gdpr">Flattr now deletes your web browsing history within 3 months</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17202999">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17205470">
                                         
-                                            80 comments
+                                            93 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=diodorus">diodorus</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527833871"
+                                            href="https://news.ycombinator.com/user?id=d2wa">d2wa</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527862388"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     126 points
                                 </span>
@@ -434,7 +434,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17214857">
                                         
-                                            32 comments
+                                            33 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=bem94">bem94</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528058403" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528059004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
