--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -428,17 +428,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://worrydream.com/Engelbart/">A few words on Doug Engelbart (2013)</a>
+                                    <a href="http://www.drdobbs.com/architecture-and-design/how-i-came-to-write-d/240165322">How I Came to Write D (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17194456">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17219379">
                                         
-                                            77 comments
+                                            105 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mpweiher">mpweiher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527749697"
+                                            href="https://news.ycombinator.com/user?id=jxub">jxub</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528032048"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     202 points
                                 </span>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528064404" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528065004" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
