--- a/top_stories/week/page5.html
+++ b/top_stories/week/page5.html
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.bbc.co.uk/news/resources/idt-sh/faroe_islands_postal_service">Tales from the far-flung Faroes</a>
+                                    <a href="http://www.drdobbs.com/architecture-and-design/how-i-came-to-write-d/240165322">How I Came to Write D (2014)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17212917">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17219379">
                                         
-                                            76 comments
+                                            113 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527917872"
+                                            href="https://news.ycombinator.com/user?id=jxub">jxub</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528032048"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     217 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528072203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528072803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
