--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.drdobbs.com/architecture-and-design/how-i-came-to-write-d/240165322">How I Came to Write D (2014)</a>
+                                    <a href="http://www.bbc.co.uk/news/resources/idt-sh/faroe_islands_postal_service">Tales from the far-flung Faroes</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17219379">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17212917">
                                         
-                                            113 comments
+                                            76 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jxub">jxub</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528032048"
+                                            href="https://news.ycombinator.com/user?id=sjcsjc">sjcsjc</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527917872"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    216 points
+                                    217 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528072203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528072803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
