--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.davd.eu/securing-macos/">Securing macOS [in 2018]</a>
+                                    <a href="https://www.vice.com/en_ca/article/j5q3gy/herpes-welcome-to-the-disease-you-probably-have">Herpes: Welcome to the Disease You Probably Have</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218678">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224076">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bkircher">bkircher</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528017225"
+                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528079298"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    6 points
+                                    5 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528084204" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528084803" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
