--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -524,17 +524,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/articles/apple-looks-to-expand-advertising-business-with-new-network-for-apps-1527869990">Apple Looks to Expand Advertising Business with New Network for Apps</a>
+                                    <a href="https://towardsdatascience.com/the-10-statistical-techniques-data-scientists-need-to-master-1ef6dbd531f7">Statistical Techniques Data Scientists Need to Master</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17215391">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17220325">
                                         
-                                            46 comments
+                                            11 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=maltalex">maltalex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527959309"
+                                            href="https://news.ycombinator.com/user?id=lobo_tuerto">lobo_tuerto</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528043592"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     88 points
                                 </span>
@@ -548,17 +548,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://airbnb.io/lottie/">Lottie for Android, iOS, React Native, and Web</a>
+                                    <a href="https://www.wsj.com/articles/apple-looks-to-expand-advertising-business-with-new-network-for-apps-1527869990">Apple Looks to Expand Advertising Business with New Network for Apps</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17209832">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17215391">
                                         
-                                            16 comments
+                                            46 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=quickthrower2">quickthrower2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1527884753"
+                                            href="https://news.ycombinator.com/user?id=maltalex">maltalex</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527959309"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     88 points
                                 </span>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528087203" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528087804" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
