--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -212,19 +212,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.governmentattic.org/28docs/NSAsecurityPosters_1950s-60s.pdf">NSA posters from the 50s and 60s [pdf]</a>
+                                    <a href="https://arxiv.org/abs/1801.00631">Deep learning: a critical appraisal</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17222827">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17216536">
                                         
-                                            45 comments
+                                            58 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=rinze">rinze</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528065930"
+                                            href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1527975781"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    137 points
+                                    140 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528090803" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528091403" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
