--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -404,19 +404,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://motherboard.vice.com/en_us/article/mbk3nx/ticketfly-website-database-hacked-data-breach">Hacker Defaces Ticketfly’s Website, Steals Customer Database</a>
+                                    <a href="https://www.unicode.org/L2/L2017/17435-terminals-prop.pdf">Unicode Graphics for Legacy Computing Proposal [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17218245">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224396">
                                         
-                                            comments
+                                            1 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bkudria">bkudria</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528007844"
+                                            href="https://news.ycombinator.com/user?id=yuhong">yuhong</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528083447"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    4 points
+                                    3 points
                                 </span>
                             </td>
                         </tr>
@@ -428,17 +428,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://medium.com/@ageitgey/the-real-scandal-of-ai-awful-stock-photos-456633b9b0fc?source=linkShare-ee08b1614a2d-1528090210">The Real Scandal of AI: Awful Stock Photos</a>
+                                    <a href="https://github.com/search?o=desc&q=move+to+gitlab&s=created&type=Issues">GitHub Projects: “Move to Gitlab”</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17224920">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17224385">
                                         
                                             comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=opdahl">opdahl</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528090263"
+                                            href="https://news.ycombinator.com/user?id=peeyek">peeyek</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528083280"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     3 points
                                 </span>
@@ -489,7 +489,7 @@
             <strong><a href="https://www.heikers.com">heikers.com</a></strong>
             &nbsp;&nbsp;
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528093806" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528094404" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
